<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/socialNetworkProfile" />

        <LinearLayout
            android:id="@+id/user_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:background="@color/green"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/user_picture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dip"
                android:contentDescription="User picture"
                android:src="@drawable/gon96x96" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:text="@string/description" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_description"
            android:background="@color/cyan"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonShowProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:background="@color/grey"
                android:text="@string/showProfile" />

            <Button
                android:id="@+id/buttonGetInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:background="@color/grey"
                android:text="@string/getInfo" />

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:background="@color/grey"
                android:text="@string/update" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/whereIAm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/user_description"
            android:layout_toRightOf="@+id/buttons"
            android:background="@color/customGreen"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="10dip"
                android:scaleType="center"
                android:src="@drawable/map" />

            <Button
                android:id="@+id/buttonWhereIAm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:background="@color/grey"
                android:text="@string/whereIAm" />
        </LinearLayout>

        <TextView
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/whereIAm"
            android:layout_centerHorizontal="true"
            android:background="@color/brown"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/statusBar"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:textColor="@color/red" />
    </RelativeLayout>

</ScrollView>